Misc updates for 0.0210 release
darcs-hash:20050216181508-8fbd9-1c161c26aac950c56846752abb90c5e6d9d356c2.gz

--- a/Changes
+++ b/Changes
@@ -4,32 +4,26 @@ LectroTest Change Log
 Tom Moertel (tom@moertel.com)
 
 
-* 0.20_10   (XXXXXXXXXX)
-
-** Improvements
-
-** Fixes
-
-- Removed use of List::Util from t/001.t.  (This should be
-  the list use of the module.  Now we can cut the dependency.)
-
-** Misc
-
-
-* 0.20_09   (2005-02-07)
+* 0.20_10   (2004-02-16)
 
 ** Improvements
 
 - Now you can mix LectroTest and Test::* modules!
-  Test::LectroTest::Compat provides the compatiblity magic.
+  Test::LectroTest::Compat provides the compatibility magic.
 
 ** Fixes
 
 - Updated copyright notices.
 
+- Removed use of List::Util from t/001.t.  (This should be
+  the list use of the module.  Now we can cut the dependency.)
+
+- Renamed the test .t files to something sensible.
+
 ** Misc
 
 - Made list of dependencies in Build.PL pedantically complete.
+
 
 
 * 0.20_08   (2005-02-05)
@@ -133,7 +127,7 @@ Tom Moertel (tom@moertel.com)
   end of load.
 
 
-* 0.20_03  Bugfix and doc improvements (2004-09-11)
+* 0.20_03  Bug fix and doc improvements (2004-09-11)
 
 ** Fixes
 
