Minor cleanups to docs
Cleaned up references to QuickCheck.
Fixed a typo.

darcs-hash:20050218060417-8fbd9-b5f6e13ffe339f446042054533ec4a11392b0b4b.gz

--- a/Changes
+++ b/Changes
@@ -16,7 +16,7 @@ Tom Moertel (tom@moertel.com)
 - Updated copyright notices.
 
 - Removed use of List::Util from t/001.t.  (This should be
-  the list use of the module.  Now we can cut the dependency.)
+  the last use of the module.  Now we can cut the dependency.)
 
 - Renamed the test .t files to something sensible.
 
