Fixed problem that caused t/runner.t to emit two Test::Harness 1..N headers
darcs-hash:20050219070007-8fbd9-b3a97e8f298f0023dc4ea33b896c6a365d6ba6ad.gz

--- a/Changes
+++ b/Changes
@@ -23,6 +23,9 @@ Tom Moertel (tom@moertel.com)
 
 ** Fixes
 
+- An empty suite powered by Test::LectroTest now emits "1..0"
+  as its sole output when previously there was no output.
+
 ** Misc
 
 - Added a bunch of new test cases. 
