Updated Changes for 0.31 release
darcs-hash:20050219201847-8fbd9-201155b27be453b6ca6dfe518d2befaaa3c4cbe4.gz

--- a/Changes
+++ b/Changes
@@ -4,6 +4,15 @@ LectroTest Change Log
 Tom Moertel (tom@moertel.com)
 
 
+
+
+* 0.31   (2005-02-19)
+
+- This release is identical to 0.30 except that for this release
+  I did not screw up the version numbering in the distribution
+  tarball.  (Ouch!)
+
+
 * 0.30   (2005-02-19)
 
 ** Improvements
