Minor code cleanups for 0.3200 release; bumped version to 0.3200
darcs-hash:20050303052914-8fbd9-af374fcebacb4c0d35c271f33d8f7585eb3f439a.gz

--- a/Changes
+++ b/Changes
@@ -14,8 +14,8 @@ Tom Moertel (tom@moertel.com)
       See Test::LectroTest::TestRunner::testcontroller for the
   documentation on the new $tcon->note() and $tcon->dump() methods.
 
-** Fixes
-
+- Strings in counterexamples are now printed in double-quoted form.
+  This makes it easy to see invisibles.
 
 
 * 0.3100   (2005-02-19)
