Prepared for release 0.3300; minor code clean-ups
darcs-hash:20050717002327-8fbd9-9935a41b5f06d4b64fd1a76aa8a114e36d95d088.gz

--- a/Changes
+++ b/Changes
@@ -3,6 +3,13 @@
 LectroTest Change Log
 Tom Moertel (tom@moertel.com)
 
+* 0.3300   (XXXXXXXXXX)
+
+
+** Misc
+
+- Minor code clean ups.
+
 
 * 0.3200   (2005-03-03)
 
