Fixed bug that prevented LT from being mentioned in a MM list of dependencies
darcs-hash:20050720153035-8fbd9-bf830d8bb77cfaaca0acf1c0fb88c00efef61b59.gz

--- a/Changes
+++ b/Changes
@@ -5,6 +5,10 @@ Tom Moertel (tom@moertel.com)
 
 * 0.3300   (2005-07-20)
 
+** Fixes
+
+- Test::LectroTest can now be listed as a dependency in an
+  ExtUtils::MakeMaker Makefile.PL.  (Thanks Steffen Müller)
 
 ** Misc
 
