--- a/Changes
+++ b/Changes
@@ -4,6 +4,12 @@ LectroTest Change Log
 Tom Moertel (tom@moertel.com)
 
 
+* 0.3500   (XXXX-XX-XX)
+
+** Improvements
+
+
+
 * 0.3400   (2006-01-18)
 
 ** Improvements
