Included FailureRecorder.pm in manifest; thanked Steffen
darcs-hash:20060304163625-8fbd9-b3f4728cb2be1bf91a01607624215a2feba124cf.gz

--- a/THANKS
+++ b/THANKS
@@ -15,6 +15,10 @@
 
 - Andy Lester for prodding me into getting the word out and writing
   something about LectroTest.
+
+- Steffen Müller for good ideas about testing corner cases, which
+  became the basis for LectroTests's failure recording and playback
+  capabilities.
   
 --
 Tom Moertel <tom@moertel.com>
