Tweaked the Thanks file
darcs-hash:20060304163839-8fbd9-4b704322333cbdd44ce9f3edde2a46e57bf6962e.gz

--- a/THANKS
+++ b/THANKS
@@ -14,11 +14,11 @@
   abundant, all-around coolness
 
 - Andy Lester for prodding me into getting the word out and writing
-  something about LectroTest.
+  something about LectroTest
 
 - Steffen Müller for good ideas about testing corner cases, which
   became the basis for LectroTests's failure recording and playback
-  capabilities.
+  capabilities
   
 --
 Tom Moertel <tom@moertel.com>
