Added support for signing the module w/ Module::Signature
darcs-hash:20060304185933-8fbd9-30b8c729841d67dc80b7a49201a5771bebf4a8e7.gz

--- a/Changes
+++ b/Changes
@@ -28,6 +28,12 @@ Tom Moertel (tom@moertel.com)
   These options are documented more fully in the docs for
   Test::LectroTest::TestRunner.
 
+** Misc
+
+- I'm now using Module::Signature to sign the Test::LectroTest
+  distribution.
+
+
 
 * 0.3400   (2006-01-18)
 
