Updated Changes for 0.3600 release
darcs-hash:20070830212923-8fbd9-3c1c6fb27e119ff101acd06ae84f9de0766f08bd.gz

--- a/Changes
+++ b/Changes
@@ -4,6 +4,17 @@ LectroTest Change Log
 Tom Moertel (tom@moertel.com)
 
 
+* 0.3600   (2007-08-30)
+
+** Misc
+
+- Test suite for generators now emits notice that a failure may
+  not indicate a real problem.  (rt.cpan.org #28203)
+
+- Minor typo fixes in the documentation.
+
+
+
 * 0.3500   (2006-05-31)
 
 ** Improvements
